# fastpanel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVLOG-0.2.1.md  DEVLOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
example/: .env.example  main.py  models.py
fastpanel/: __init__.py  config.py  middleware.py  router.py  store.py  toolbar.py
fastpanel/panels/: __init__.py  base.py  cache.py  headers.py  logging.py  performance.py  request.py  response.py  sql.py
fastpanel/static/: debugger.js  toolbar.css  toolbar.js
fastpanel/templates/: debugger.html  toolbar.html
fastpanel/templates/panels/: cache.html  headers.html  logging.html  performance.html  request.html  response.html  sql.html
tests/: conftest.py  test_cache_panel.py  test_logging_panel.py  test_middleware.py  test_performance_panel.py  test_request_panel.py  test_response_panel.py  test_router.py  test_sql_panel.py  test_store.py
