[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastpanel"
version = "0.1.0"
description = "A developer debug toolbar for FastAPI — inspect SQL, requests, performance, logs, and cache in real time."
authors = ["officialalkenes <officialalkenes@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/officialalkenes/fastpanel"
repository = "https://github.com/officialalkenes/fastpanel"
documentation = "https://github.com/officialalkenes/fastpanel#readme"
keywords = ["fastapi", "debug", "toolbar", "profiling", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "fastpanel" }]
include = [
    "fastpanel/static/**/*",
    "fastpanel/templates/**/*",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.100.0"
starlette = ">=0.27.0"
jinja2 = ">=3.1.0"

[tool.poetry.extras]
sqlalchemy = ["sqlalchemy"]
redis = ["redis"]
all = ["sqlalchemy", "redis"]

[tool.poetry.group.sqlalchemy.dependencies]
sqlalchemy = { version = ">=2.0.0", optional = true, extras = ["asyncio"] }

[tool.poetry.group.redis.dependencies]
redis = { version = ">=5.0.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"
black = ">=24.0.0"
ruff = ">=0.3.0"
pre-commit = ">=3.7.0"
pytest-cov = ">=5.0.0"
sqlalchemy = { version = ">=2.0.0", extras = ["asyncio"] }
aiosqlite = ">=0.20.0"
redis = ">=5.0.0"
fakeredis = ">=2.23.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by black
    "B008",  # do not perform function calls in default arguments
    "B027",  # empty method in ABC without abstract decorator — intentional for
             # optional lifecycle hooks (enable, process_request, process_response,
             # reset) that panels choose to override rather than being forced to
]

[tool.ruff.lint.isort]
known-first-party = ["fastpanel"]

[tool.coverage.run]
source = ["fastpanel"]
omit = ["tests/*", "example/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
